--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+  <a href="/">Home</a> <br>
+  <a href="/signup">Sign Up</a> <br>
+  <a href="/login">Log In</a> <br>
+  <a href="/private-page">Private Page</a> <br>
+  <a href="/boss-account">Admin's account</a> <br>
+
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
