--- a/starter-code/views/passport/signup.hbs
+++ b/starter-code/views/passport/signup.hbs
@@ -11,6 +11,11 @@
     <input type="password" name="password" placeholder="password">
     </label>
 
+  <label for="role">
+    Role:
+    <input type="text" name="role" placeholder="role">
+  </label>
+
   <button type="submit">Sign Up!</button>
 
 </form>
